#524.lineheight-fix-tertiare-button : line-height fix voor .btn-link-btn-align

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -195,6 +195,7 @@
   padding: 0;
 
   &.btn-align {
+    line-height: calc(1.5em - 1px);
     padding: $dso-button-link-padding-horizontal 0;
     position: relative;
   }
